@@ -3,7 +3,7 @@
 ACLOCAL = $(top_srcdir)/aclocal.sh
 
 bin_PROGRAMS = music eventsource eventsink eventselect eventgenerator \
-	       @OPTIONAL_UTILS@
+	       eventcounter @OPTIONAL_UTILS@
 EXTRA_PROGRAMS = viewevents
 
 music_SOURCES = music.cc application_mapper.cc application_mapper.hh
@@ -25,6 +25,10 @@ eventselect_LDADD = $(top_builddir)/src/libmusic.la $(top_builddir)/rudeconfig/l
 eventgenerator_SOURCES = eventgenerator.cc
 eventgenerator_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
 eventgenerator_LDADD = $(top_builddir)/src/libmusic.la $(top_builddir)/rudeconfig/librudeconfig.la @MPI_LDFLAGS@
+
+eventcounter_SOURCES = eventcounter.cc
+eventcounter_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
+eventcounter_LDADD = $(top_builddir)/src/libmusic.la @MPI_LDFLAGS@
 
 viewevents_SOURCES = viewevents.cpp VisualiseNeurons.cpp VisualiseNeurons.h
 viewevents_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
